--- a/AngularHotel/src/app/app.hotel.html
+++ b/AngularHotel/src/app/app.hotel.html
@@ -4,7 +4,7 @@
 	<div class = "row">
 		<div class="col-xs-6 col-md-4">
 			<div class="input-group">
-				<input type="text" class="form-control" placeholder="Enter hotel name" id="txtSearch" [(ngModel)]="task.name"/>
+				<input type="text" class="form-control" placeholder="Enter hotel name" id="txtSearch" (keydown)="onEnter($event)" [(ngModel)]="task.name"/>
 				<div class="input-group-btn">
 					<button class="btn btn-primary" type="button" (click)="onClick()">
 					<span class="glyphicon glyphicon-ok"></span>
