--- a/AngularHotel/src/app/app.hotel.html
+++ b/AngularHotel/src/app/app.hotel.html
@@ -1,4 +1,5 @@
-<div>
+<div class="container">
+	
 	<h2> Hotel Lists </h2>
 
 	<div class = "row">
@@ -9,12 +10,19 @@
 					<button class="btn btn-primary" type="button" (click)="onClick()">
 					<span class="glyphicon glyphicon-ok"></span>
 					</button>
+					
 				</div>
 			</div>
 		</div>
+		
+		<div class="col-xs-6 col-md-8">
+			<button class="btn btn-danger removeAll" type="button" (click)="removeAll()">
+						<span> Remove all hotels </span>
+			</button>
+		</div>
 	</div>
 
-<br />
+	
 
 	<ul class="list-group">
 		<li *ngFor="let task of tasks" class="list-group-item">
